--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@ body {
     background-color: whitesmoke;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+ul.navBar {
+    list-style-type: none;
+    padding: 10px;
+    
+}
