--- a/style.css
+++ b/style.css
@@ -6,14 +6,15 @@ body {
 ul.navBar {
     list-style-type: none;
     padding: 10px;
-
+    overflow: hidden;
 }
 
-ul.navBar li {
+ul.navBar li a{
     margin: 0 2px 0 2px;
+    float: center;
 }
 
-ul.navBar li:hover {
+ul.navBar li a:hover {
     background-color: grey;
     color: black;
 }
