--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@ ul.navBar {
 
 ul.navBar li a{
     margin: 0 2px 0 2px;
+    padding: 20px;
     float: center;
+    border-radius: 1px solid black;
 }
 
 ul.navBar li a:hover {
