--- a/style.css
+++ b/style.css
@@ -1,22 +1,39 @@
 body {
     background-color: whitesmoke;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
 }
 
-ul.navBar {
-    list-style-type: none;
-    padding: 10px;
-    overflow: hidden;
+.navBar {
+    margin-left: 1em;
+    margin-right: 1em;
+    position: relative;
+    display: block;
+    text-decoration: none;
+    font-size: 1.3em;;
+    color: white;
+    padding: 4px 0;
+    transition: 0.5s;
 }
 
-ul.navBar li a{
-    margin: 0 2px 0 2px;
-    padding: 20px;
-    float: center;
-    border-radius: 1px solid black;
+.navBar a:hover {
+    color: #95a5a6;
+}
+  
+.navBar a:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
 }
 
-ul.navBar li a:hover {
-    background-color: grey;
-    color: black;
-}
+.navBar a::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 2px;
+    top: 95%;
+    left: 0;
+    background: white;
+    transition: transform 0.5s;
+    transform: scaleX(0);
+    transform-origin: right;
+  }
