--- a/style.css
+++ b/style.css
@@ -1,8 +1,29 @@
 body {
     background-color: whitesmoke;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Helvetica Neue', sans-serif;
     font-size: 14px;
     align-items: center;
+}
+
+*::-webkit-scrollbar {
+    display: none;
+}
+
+.container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+  
+.description {
+    font-size: 1.4rem;
+    font-family: 'Helvetica Neue', sans-serif;
+    font-weight: 400;
+    color: #7b8290;
+    margin-top: -15px;
 }
 
 .navBar {
@@ -16,17 +37,14 @@ body {
     padding: 4px 0;
     transition: 0.5s;
 }
-
-.navBar a:hover {
-    color: #95a5a6;
-}
   
-.navBar a:hover::after {
+.navBar a:hover {
     transform: scaleX(1);
     transform-origin: left;
+    color: #95a5a6;
 }
 
-.navBar a::after {
+.navBar a {
     position: absolute;
     content: "";
     width: 100%;
@@ -37,4 +55,4 @@ body {
     transition: transform 0.5s;
     transform: scaleX(0);
     transform-origin: right;
-  }
+}
