--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
     background-color: whitesmoke;
-    font-family: 'Helvetica Neue', sans-serif;
+    font-family: 'Segoe UI';
     font-size: 14px;
-    align-items: center;
+    overflow: hidden;
 }
 
 *::-webkit-scrollbar {
@@ -11,48 +11,64 @@ body {
 
 .container {
     width: 100vw;
-    height: 100vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
   
-.description {
-    font-size: 1.4rem;
-    font-family: 'Helvetica Neue', sans-serif;
+.desc {
+    font-size: 1.2rem;
+    font-family: 'Consolas';
     font-weight: 400;
     color: #7b8290;
     margin-top: -15px;
 }
 
+h1 {
+    color: black;
+    font-size: 2em;
+}
+
 .navBar {
+    margin-top: 3em;
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+  
+.navBar a {
     margin-left: 1em;
     margin-right: 1em;
     position: relative;
     display: block;
     text-decoration: none;
     font-size: 1.3em;;
-    color: white;
+    color: black;
     padding: 4px 0;
     transition: 0.5s;
 }
   
-.navBar a:hover {
-    transform: scaleX(1);
-    transform-origin: left;
-    color: #95a5a6;
-}
-
-.navBar a {
+.navBar a::after {
     position: absolute;
     content: "";
     width: 100%;
     height: 2px;
     top: 95%;
     left: 0;
-    background: white;
+    background: black;
     transition: transform 0.5s;
     transform: scaleX(0);
     transform-origin: right;
+}
+  
+.navBar a:hover {
+    color: black;
+}
+  
+.navBar a:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
 }
