--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@500&display=swap'); /* Readex Pro Font */
+@import url('https://fonts.googleapis.com/css2?family=Exo+2&family=Lato&display=swap'); /* Exo 2 */
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&family=Readex+Pro:wght@500&display=swap'); /* Inconsolata Font */
 
 body {
     background-color: whitesmoke;
-    font-family: 'Readex Pro';
+    font-family: 'Exo 2';
     font-size: 14px;
     overflow: hidden;
 }
