--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Exo+2&family=Lato&family=Montserrat&family=Source+Sans+Pro&display=swap'); /* Montserrat */
+@import url('https://fonts.googleapis.com/css2?family=Exo+2&family=Lato&family=Montserrat:wght@400;600&family=Source+Sans+Pro&display=swap'); /* Montserrat */
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&family=Readex+Pro:wght@500&display=swap'); /* Inconsolata Font */
 
 body {
